// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags renders correctly when manualInput is disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.emotion-0>* {
  margin: 6px;
}

.emotion-1 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-2 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #eeeeff;
}

.emotion-3:hover svg,
.emotion-3:focus svg {
  fill: #4f0599;
}

.emotion-4 {
  fill: #b2b6c3;
  vertical-align: middle;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="sui-box emotion-0"
  >
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        hello
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        world
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags renders correctly when variant = bordered 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 0;
  padding: 8px 0;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0>input:focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.4);
}

.emotion-0>* {
  margin-bottom: 6px;
}

.emotion-0>*:not(:last-child) {
  margin-right: 6px;
}

.emotion-1 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.emotion-2 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #b2b6c3;
  padding: 4px;
  width: 32px;
  height: 32px;
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #eeeeff;
}

.emotion-3:hover svg,
.emotion-3:focus svg {
  fill: #4f0599;
}

.emotion-4 {
  fill: #b2b6c3;
  vertical-align: middle;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-9 {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #fff;
}

.emotion-9::-webkit-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::-moz-placeholder {
  color: #b2b6c3;
}

.emotion-9:-ms-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::placeholder {
  color: #b2b6c3;
}

<div
    class="sui-box emotion-0"
  >
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        hello
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        world
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <input
      class="emotion-9"
      name="radio"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Tags renders correctly when variant = bordered and borderedContainer = false 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:focus-within {
  box-shadow: 0 0 2px 4px rgba(79,5,153,0.25);
}

.emotion-0>* {
  margin-right: 6px;
  margin-bottom: 6px;
}

.emotion-1 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.emotion-2 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #b2b6c3;
  padding: 4px;
  width: 32px;
  height: 32px;
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #eeeeff;
}

.emotion-3:hover svg,
.emotion-3:focus svg {
  fill: #4f0599;
}

.emotion-4 {
  fill: #b2b6c3;
  vertical-align: middle;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-9 {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #fff;
}

.emotion-9::-webkit-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::-moz-placeholder {
  color: #b2b6c3;
}

.emotion-9:-ms-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::placeholder {
  color: #b2b6c3;
}

<div
    class="sui-box emotion-0"
  >
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        hello
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        world
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <input
      class="emotion-9"
      name="radio"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Tags renders correctly with base props 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.emotion-0>* {
  margin: 6px;
}

.emotion-1 {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #fff;
}

.emotion-1::-webkit-input-placeholder {
  color: #b2b6c3;
}

.emotion-1::-moz-placeholder {
  color: #b2b6c3;
}

.emotion-1:-ms-input-placeholder {
  color: #b2b6c3;
}

.emotion-1::placeholder {
  color: #b2b6c3;
}

<div
    class="sui-box emotion-0"
  >
    <input
      class="emotion-1"
      name="radio"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Tags renders correctly with some tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.emotion-0>* {
  margin: 6px;
}

.emotion-1 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-2 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #eeeeff;
}

.emotion-3:hover svg,
.emotion-3:focus svg {
  fill: #4f0599;
}

.emotion-4 {
  fill: #b2b6c3;
  vertical-align: middle;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-9 {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #fff;
}

.emotion-9::-webkit-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::-moz-placeholder {
  color: #b2b6c3;
}

.emotion-9:-ms-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::placeholder {
  color: #b2b6c3;
}

<div
    class="sui-box emotion-0"
  >
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        hello
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        world
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <input
      class="emotion-9"
      name="radio"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Tags renders correctly with some tags 2`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.emotion-0>* {
  margin: 6px;
}

.emotion-1 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-2 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #eeeeff;
}

.emotion-3:hover svg,
.emotion-3:focus svg {
  fill: #4f0599;
}

.emotion-4 {
  fill: #b2b6c3;
  vertical-align: middle;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-9 {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #fff;
}

.emotion-9::-webkit-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::-moz-placeholder {
  color: #b2b6c3;
}

.emotion-9:-ms-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::placeholder {
  color: #b2b6c3;
}

<div
    class="sui-box emotion-0"
  >
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        hello
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        world
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <input
      class="emotion-9"
      name="radio"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Tags renders correctly with some tags as objects 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.emotion-0>* {
  margin: 6px;
}

.emotion-1 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-2 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-3 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3:hover,
.emotion-3:focus {
  background-color: #eeeeff;
}

.emotion-3:hover svg,
.emotion-3:focus svg {
  fill: #4f0599;
}

.emotion-4 {
  fill: #b2b6c3;
  vertical-align: middle;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-9 {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #fff;
}

.emotion-9::-webkit-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::-moz-placeholder {
  color: #b2b6c3;
}

.emotion-9:-ms-input-placeholder {
  color: #b2b6c3;
}

.emotion-9::placeholder {
  color: #b2b6c3;
}

<div
    class="sui-box emotion-0"
  >
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        hello
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="sui-box emotion-1"
    >
      <span
        class="emotion-2"
      >
        world
      </span>
      <button
        class="sui-box emotion-3"
        type="button"
      >
        <svg
          class="sui-box sc-ui-icon emotion-4"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <input
      class="emotion-9"
      name="radio"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
